--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "jest": "^29.7.0",
     "jsdom": "^26.1.0",
     "vite": "^6.2.0",
+    "vite-plugin-svgr": "^4.3.0",
     "vitest": "^3.1.1"
   }
 }
